src/test/ui/pattern/non-constant-in-const-path.stderr
error[E0080]: runtime values cannot be referenced in patterns
  --> $DIR/non-constant-in-const-path.rs:8:15
   |
LL |     let 0u8..=x = 0;
   |               ^

error[E0658]: referencing statics in patterns is experimental
  --> $DIR/non-constant-in-const-path.rs:10:15
   |
LL |     let 0u8..=FOO = 0;
   |               ^^^
   |
   = help: add `#![feature(static_in_pattern)]` to the crate attributes to enable

error[E0080]: runtime values cannot be referenced in patterns
  --> $DIR/non-constant-in-const-path.rs:13:15
   |
LL |         0 ..= x => {}
   |               ^

error[E0658]: referencing statics in patterns is experimental
  --> $DIR/non-constant-in-const-path.rs:15:15
   |
LL |         0 ..= FOO => {}
   |               ^^^
   |
   = help: add `#![feature(static_in_pattern)]` to the crate attributes to enable

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0080, E0658.
For more information about an error, try `rustc --explain E0080`.
